// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    className={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#b7b7b7",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 1,
            "paddingBottom": 10,
            "paddingLeft": 22,
            "paddingRight": 22,
            "paddingTop": 10,
            "width": "70%",
          },
          Array [
            Object {},
            Array [
              Object {},
              undefined,
            ],
          ],
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      primary={undefined}
      rounded={false}
      secondary={undefined}
      style={
        Array [
          Object {
            "color": "#007ac9",
            "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
            "fontSize": 30,
            "fontWeight": "500",
            "letterSpacing": -0.7,
            "lineHeight": 30,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Default Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button primary 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    className={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "backgroundColor": "#007ac9",
            "borderColor": "#007ac9",
            "borderRadius": 40,
            "borderStyle": "solid",
            "borderWidth": 1,
            "paddingBottom": 10,
            "paddingLeft": 22,
            "paddingRight": 22,
            "paddingTop": 10,
            "width": "70%",
          },
          Array [
            Object {},
            Array [
              Object {},
              undefined,
            ],
          ],
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      primary={true}
      rounded={false}
      secondary={undefined}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
            "fontSize": 30,
            "fontWeight": "500",
            "letterSpacing": -0.7,
            "lineHeight": 30,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Primary Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button secondary 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    className={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#848484",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 1,
            "paddingBottom": 10,
            "paddingLeft": 22,
            "paddingRight": 22,
            "paddingTop": 10,
            "width": "70%",
          },
          Array [
            Object {},
            Array [
              Object {},
              undefined,
            ],
          ],
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      primary={undefined}
      rounded={false}
      secondary={true}
      style={
        Array [
          Object {
            "color": "#848484",
            "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
            "fontSize": 30,
            "fontWeight": "500",
            "letterSpacing": -0.7,
            "lineHeight": 30,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Secondary Button
    </Text>
  </View>
</View>
`;
